finalizacao-parte-html-do-site

--- a/index.html
+++ b/index.html
@@ -66,11 +66,46 @@
         <li><img src="/imagens/Pc_game_logo.png" alt="PC GAMES LOGO" /></li>
       </ul>
     </section>
-    <section>
+    <section id="contact">
+      <div class="container">
+        <h2>Contato - Compre o seu!</h2>
+        <div class="contact-methods">
+          <h3>Fale Conosco</h3>
+          <form>
+            <input type="text" placeholder="Seu nome" required />
+            <input type="email" placeholder="Seu email:" required />
+            <input type="tel" placeholder="Seu telefone:" />
+            <textarea
+              placeholder="Diga qual modelo de mídia desejado"
+            ></textarea>
+            <button type="Submit">Enviar</button>
+          </form>
+        </div>
+      </div>
       <div>
-        <h2>Contato - Compre o seu</h2>
-        <div></div>
+        <h3>Nos acompanhe</h3>
+        <ul class="social-links">
+          <li>
+            <a href="#" title="Siga-nos no instagram">
+              <img src="/imagens/instagram.png" alt="Logo do instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="#" title="Siga-nos no Facebook">
+              <img src="/imagens/facebook.png" alt="Logo do Facebook"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Venha até nós</h3>
+        <p>Rua Avenida Brasil nº 574 - Rosa dos ventos - Rio de Janeiro - RJ</p>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <p>&copy; GameXperience - Todos os direitos reservados - 2023</p>
+      </div>
+    </footer>
   </body>
 </html>
